dnl Process this file with autoconf to produce a configure script.

dnl Copyright (c) 2000 Massachusetts Institute of Technology
dnl
dnl This program is free software; you can redistribute it and/or
dnl modify it under the terms of the GNU General Public License as
dnl published by the Free Software Foundation; either version 2 of the
dnl License, or (at your option) any later version.
dnl
dnl This program is distributed in the hope that it will be useful,
dnl but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
dnl General Public License for more details.
dnl
dnl You should have received a copy of the GNU General Public License
dnl along with this program; if not, write to the Free Software
dnl Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.

AC_REVISION([$Id: configure.in,v 1.3 2000/12/08 21:15:51 cph Exp $])
AC_INIT(ref-manual/scheme.texinfo)

AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET

INST_TARGETS=

enable_html=yes
AC_ARG_ENABLE(html, [generate HTML documentation])
if test "${enable_html}" = "yes"; then
    htmldir="${libdir}/mit-scheme/doc"
elif test "${enable_html}" = "no"; then
    htmldir=
else
    htmldir="${enable_html}"
fi
test "${htmldir}" = "" || INST_TARGETS="${INST_TARGETS} install-html"
AC_SUBST(htmldir)

enable_pdf=yes
AC_ARG_ENABLE(pdf, [generate PDF documentation])
if test "${enable_pdf}" = "yes"; then
    pdfdir="${libdir}/mit-scheme/doc"
elif test "${enable_pdf}" = "no"; then
    pdfdir=
else
    pdfdir="${enable_pdf}"
fi
test "${pdfdir}" = "" || INST_TARGETS="${INST_TARGETS} install-pdf"
AC_SUBST(pdfdir)

enable_ps=yes
AC_ARG_ENABLE(ps, [generate Postscript documentation])
if test "${enable_ps}" = "yes"; then
    psdir="${libdir}/mit-scheme/doc"
elif test "${enable_ps}" = "no"; then
    psdir=
else
    psdir="${enable_ps}"
fi
test "${psdir}" = "" || INST_TARGETS="${INST_TARGETS} install-ps"
AC_SUBST(psdir)

AC_SUBST(INST_TARGETS)

for D in ref-manual sos user-manual; do
    test -L ${D}/gfdl.texinfo \
      || (cd ${D}; ${ac_cv_prog_LN_S} ../imail/gfdl.texinfo .)
done

AC_OUTPUT(Makefile imail/Makefile ref-manual/Makefile sos/Makefile user-manual/Makefile)
