dnl Process this file with autoconf to produce a configure script.

dnl Copyright (c) 2000 Massachusetts Institute of Technology
dnl
dnl This program is free software; you can redistribute it and/or
dnl modify it under the terms of the GNU General Public License as
dnl published by the Free Software Foundation; either version 2 of the
dnl License, or (at your option) any later version.
dnl
dnl This program is distributed in the hope that it will be useful,
dnl but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
dnl General Public License for more details.
dnl
dnl You should have received a copy of the GNU General Public License
dnl along with this program; if not, write to the Free Software
dnl Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.

AC_REVISION([$Id: configure.in,v 1.2 2000/12/21 18:11:30 cph Exp $])
AC_INIT(microcode/boot.c)

AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET

AUXDIR=${libdir}/mit-scheme
AC_SUBST(AUXDIR)

AC_CONFIG_SUBDIRS(microcode compiler)
AC_OUTPUT(Makefile runtime/Makefile sos/Makefile edwin/Makefile imail/Makefile)
