dnl Process this file with autoconf to produce a configure script.

dnl Copyright (c) 2000-2001 Massachusetts Institute of Technology
dnl
dnl This program is free software; you can redistribute it and/or
dnl modify it under the terms of the GNU General Public License as
dnl published by the Free Software Foundation; either version 2 of the
dnl License, or (at your option) any later version.
dnl
dnl This program is distributed in the hope that it will be useful,
dnl but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
dnl General Public License for more details.
dnl
dnl You should have received a copy of the GNU General Public License
dnl along with this program; if not, write to the Free Software
dnl Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
dnl 02111-1307, USA.

AC_REVISION([$Id: configure.in,v 1.3 2001/04/15 21:12:22 cph Exp $])
AC_INIT(microcode/boot.c)

AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
if test "$(${INSTALL} --help 2> /dev/null | fgrep -e --preserve-timestamps)"
then
    INSTALL="${INSTALL} --preserve-timestamps"
fi

AUXDIR=${libdir}/mit-scheme
AC_SUBST(AUXDIR)

AC_CONFIG_SUBDIRS(microcode compiler)
AC_OUTPUT(Makefile runtime/Makefile sos/Makefile edwin/Makefile imail/Makefile)
